[gd_scene load_steps=6 format=3 uid="uid://h0bd35qyrqnq"]

[ext_resource type="Script" path="res://src/resources/objects/Trigger.gd" id="1_8xifr"]
[ext_resource type="Texture2D" uid="uid://d120fsqkjep16" path="res://src/resources/textures/dev_trigger.png" id="2_ko4x3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a505s"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mdot1"]
transparency = 1
shading_mode = 0
albedo_texture = ExtResource("2_ko4x3")
uv1_offset = Vector3(0.5, 0.5, -0.5)
uv1_triplanar = true
uv1_world_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_qskwf"]
material = SubResource("StandardMaterial3D_mdot1")
uv2_padding = 0.0

[node name="Trigger" type="Node3D" groups=["trigger"]]
script = ExtResource("1_8xifr")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_a505s")

[node name="PositionHelper" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_qskwf")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
